--- a/src/assets/scss/custom/structure/_left-menu.scss
+++ b/src/assets/scss/custom/structure/_left-menu.scss
@@ -844,9 +844,9 @@ label {
 //     height: 18px;
 //     width: 18px;
 // }
-// td button i{
-//     font-size: 18px;
-// }
+td button i{
+    font-size: 20px;
+}
 td button:hover svg {
     color: #f14e01;
 }
