--- a/src/assets/scss/custom/structure/_left-menu.scss
+++ b/src/assets/scss/custom/structure/_left-menu.scss
@@ -725,7 +725,7 @@ body {
 .requirement-tab li a {
     border: 1px solid #909192 !important;
     padding: 0.5rem 2.25rem;
-    text-transform: uppercase;
+    text-transform: capitalize;
     font-weight: 500;
     font-size: 12px;
     text-align: center;
