--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -163,7 +163,7 @@ $sizes: map-merge(
 //
 // Settings for the `<body>` element.
 
-$body-bg:                   #f3f4f7;
+$body-bg:                   #e5e5e5;
 $body-color:                $gray-600;
 
 
