--- a/src/assets/scss/custom/structure/_left-menu.scss
+++ b/src/assets/scss/custom/structure/_left-menu.scss
@@ -621,11 +621,11 @@
     color: #fff;
 }
 .img-brd{
-    border-right: 1px solid #2b2c2c;
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
     padding-right: 5px;
 }
 .img-brd2{
-    border-left: 1px solid #2b2c2c;
+    border-left: 1px solid rgba(0, 0, 0, 0.5);
     padding-left: 20px;
     margin-left: -15px;
 
@@ -654,11 +654,11 @@
     text-align: center;
 }
 .avatar-sm {
-    height: 3.5rem !important;
-    width: 3.5rem !important;
+    height: 4.5rem !important;
+    width: 4.5rem !important;
 }
 .page-title {
-    background: #fff;
+    background: #e5e5e5;
     padding: 10px 0 !important;
 }
 .content-page{
@@ -667,13 +667,14 @@
 body {
     font-family: 'Montserrat', sans-serif;
    // background-color: #fff;
+   color: #212529;
 }
 .home-navbar {
-    background-color: #e5e5e5 !important;
+    background-color: #ffffff !important;
 }
 .home-navbar li a{
     color: #212529; 
-    font-weight: 600;
+    font-weight: bold;
     padding-right: 2rem !important;
     text-transform: uppercase;
 }
@@ -724,12 +725,12 @@ body {
 }
 .requirement-tab li a {
     border: 1px solid #909192 !important;
-    padding: 0.5rem 2.25rem;
+    padding: 0.75rem 2.25rem;
     text-transform: capitalize;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 12px;
     text-align: center;
-    color: #212529;
+    color: rgba(0, 0, 0, 0.5);
     cursor: pointer;
 }
 .requirement-tab li a.active {
@@ -738,7 +739,12 @@ body {
 .requirement-tab .nav-link.active, .requirement-tab .nav-item.show .nav-link {
     color: #fff;
     background-color: #f14e01;
-    border-color: #dee2e6 #dee2e6 #fff;
+    border: none !important;
+}
+.requirement-tab .nav-link:hover{
+background-color: #f14e01;
+color: #ffffff;
+border: none !important;
 }
 .style-input, .data-table-extensions > .data-table-extensions-filter > .filter-text {
     background: transparent;
@@ -773,6 +779,9 @@ label {
 }
 .NfIlA{
     z-index: -1;
+}
+.table{
+    color: #212529;
 }
 .table thead{
     background-color: #212429 !important;    
@@ -852,4 +861,7 @@ td button:hover svg {
 }
 td button:hover i {
     color: #f14e01;
+}
+.form-control {
+    color: rgba(0, 0, 0, 0.5);
 }
