--- a/src/assets/scss/custom/structure/_left-menu.scss
+++ b/src/assets/scss/custom/structure/_left-menu.scss
@@ -201,6 +201,10 @@
     .pro-user-name {
         color: $menu-item;
         font-weight: $font-weight-semibold;
+        white-space: nowrap;
+    /* width: 50px; */
+    overflow: hidden;
+    text-overflow: ellipsis;
     }
 
     .pro-user-desc {
@@ -876,4 +880,18 @@ a:hover {
 }
 .btn-link{
     padding: 0px 10px;
+}
+.upload-li{
+    margin-left: -35px;
+}
+.header-info{
+    background-color: #212429 !important;
+    color: #ffffff;
+    width: 100%;
+    padding: 10px 20px;
+    margin-bottom: 25px;
+    padding-left: 35px;
+}
+.btn-link {
+    font-size: 14px;
 }
